# CNN_FOR_TEXT_TEST

./: README.md  pyproject.toml
CNN_TEXT/: client_app.py  server_app.py  strategy.py  task.py  test.py
outputs/2025-04-06/17-22-22/: results.json  run_config.json
wandb/run-20250406_172223-9f0lkrvt/: run-9f0lkrvt.wandb
wandb/run-20250406_172223-9f0lkrvt/files/: requirements.txt  wandb-metadata.json
