[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CNN_TEXT"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.13.1",
    "flwr-datasets[vision]==0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "ray>=2.10.0",
    "wandb==0.17.8",
    "toml>=0.10.2"  # Thêm toml vào dependencies
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "CNN_TEXT"

[tool.flwr.app.components]
serverapp = "CNN_TEXT.server_app:app"
clientapp = "CNN_TEXT.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 50
fraction-fit = 0.5
local-epochs = 100
server-device = "cpu"
use-wandb = true

[tool.flwr.app.config.model-params]  # Phần này sẽ được thêm bởi server
vocab_size = 50000  # Ví dụ, giá trị thực tế sẽ được server cập nhật
embedding_dim = 256
num_filters = 128
kernel_size = 3
max_length = 512

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 20

[tool.flwr.federations.localhost-gpu]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.25