[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "CNN_TEXT"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [ "flwr[simulation]==1.13.1", "flwr-datasets[vision]==0.3.0", "torch==2.2.1", "torchvision==0.17.1", "ray>=2.10.0", "wandb==0.17.8", "toml>=0.10.2",]

[tool.flwr.app]
publisher = "CNN_TEXT"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.app.components]
serverapp = "CNN_TEXT.server_app:app"
clientapp = "CNN_TEXT.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 50
fraction-fit = 0.5
local-epochs = 100
server-device = "cpu"
use-wandb = true

[tool.hatch.build.targets.wheel]
packages = [ ".",]

[tool.flwr.federations.local-simulation.options]
num-supernodes = 50

[tool.flwr.federations.localhost-gpu.options]
num-supernodes = 50

[tool.flwr.federations.localhost-gpu.options.backend.client-resources]
num-cpus = 1
num-gpus = 0.25
